# chatbot-promptior

./: .gitignore  Dockerfile  README.md  diagram.drawio  pyproject.toml  requirements.txt
app/: main.py  scraper.py  server.py  vector_db.py
copilot/: .workspace
copilot/environments/dev/: manifest.yml
copilot/promptior-service/: manifest.yml
