[tool.poetry]
name = "chatbot-promptior"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
async-timeout = "4.0.3"
attrs = "23.2.0"
Authlib = "1.3.0"
beautifulsoup4 = "4.12.3"
build = "1.0.3"
CacheControl = "0.13.1"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
cryptography = "42.0.4"
dataclasses-json = "0.6.4"
distlib = "0.3.8"
distro = "1.9.0"
dulwich = "0.21.7"
exceptiongroup = "1.2.0"
fastapi = "0.109.2"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
frozenlist = "1.4.1"
gitdb = "4.0.11"
GitPython = "3.1.42"
greenlet = "3.0.3"
grpcio = "1.62.0"
grpcio-health-checking = "1.62.0"
grpcio-tools = "1.62.0"
h11 = "0.14.0"
httpcore = "1.0.4"
httpx = "0.27.0"
httpx-sse = "0.4.0"
idna = "3.6"
importlib-metadata = "7.0.1"
installer = "0.7.0"
jsonpatch = "1.33"
jsonpointer = "2.4"
keyring = "24.3.0"
langchain = "0.1.9"
langchain-cli = "0.0.21"
langchain-community = "0.0.24"
langchain-core = "0.1.26"
langsmith = "0.1.6"
markdown-it-py = "3.0.0"
marshmallow = "3.20.2"
mdurl = "0.1.2"
more-itertools = "10.2.0"
msgpack = "1.0.7"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
numpy = "1.26.4"
openai = "1.12.0"
orjson = "3.9.15"
outcome = "1.3.0.post0"
packaging = "23.2"
pexpect = "4.9.0"
pinecone-client = "3.0.3"
pip = "23.3.1"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
protobuf = "4.25.3"
ptyprocess = "0.7.0"
pycparser = "2.21"
pydantic_core = "2.16.2"
Pygments = "2.17.2"
pyproject_hooks = "1.0.0"
PySocks = "1.7.1"
python-dotenv = "1.0.1"
PyYAML = "6.0.1"
rapidfuzz = "3.6.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rich = "13.7.0"
selenium = "4.18.1"
setuptools = "68.2.2"
shellingham = "1.5.4"
smmap = "5.0.1"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
SQLAlchemy = "2.0.27"
sse-starlette = "1.8.2"
starlette = "0.36.3"
tenacity = "8.2.3"
tomli = "2.0.1"
tomlkit = "0.12.3"
tqdm = "4.66.2"
trio = "0.24.0"
trio-websocket = "0.11.1"
trove-classifiers = "2024.2.23"
typer = "0.9.0"
typing_extensions = "4.9.0"
typing-inspect = "0.9.0"
urllib3 = "2.2.1"
validators = "0.22.0"
virtualenv = "20.25.1"
wheel = "0.41.2"
wsproto = "1.2.0"
xattr = "0.10.1"
yarl = "1.9.4"
zipp = "3.17.0"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
